# btl_python

./: .env.example  .env.s2t.example  .gitignore  Makefile  README.md  WORKFLOW.md  docker-compose.dev.yml  docker-compose.monitor.yml  docker-compose.prod.yml  package-lock.json  package.json
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  mkdocs.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 117a313fc715_add_fully_schema.py  1a179c534d59_add_name_for_recording.py  622c1ab0aef5_init.py  85b209f2cad8_fix.py  8773c258e1ff_add_record_status.py  b75bcf727d7f_add_segment_word.py  bd5f4fd28855_add_created_at_and_updated_at.py  c4e04f6e287c_add_billing_cycle_into_plan.py  cc36b1c7bdeb_add_user_model.py  ccf0e5a3c64d_add_sth.py  dbb81ae680d1_add_chat_session.py  f3c708206379_init.py
backend/scripts/: create_admin.py  seed_admin.py  seed_data.py  seed_plans.py  test_login.py  test_loki.sh  test_register.py  truncate_data.py
backend/scripts/procedure/: 00_trigger_increment_usage.sql  01_sp_register_user.sql  02_sp_check_quota_and_create_recording.sql  03_sp_complete_recording.sql  04_sp_reset_monthly_cycles.sql  05_sp_get_user_stats.sql  06_sp_change_user_plan.sql  07_sp_cleanup_old_recordings.sql
backend/speech_hub/auth/v1/: auth_service_pb2.py  auth_service_pb2.pyi  auth_service_pb2_grpc.py
backend/speech_hub/common/v1/: types_pb2_grpc.py
backend/speech_hub/s2t/v1/: record_pb2_grpc.py  speech_to_text_pb2_grpc.py
backend/src/: grpc_server.py  grpc_server_dev.py  main.py
backend/src/api/v1/: main.py
backend/src/core/: logger.py
backend/src/core/config/: env.py
backend/src/core/database/: db.py
backend/src/core/database/models/: __init__.py  chat_message.py  chat_session.py  plan.py  recording.py  segment.py  transcript_chunk.py  user.py  user_profile.py  user_subscription.py
backend/src/core/redis/: client.py  worker.py
backend/src/core/s3/minio/: client.py
backend/src/core/security/: password.py  subsription.py  token.py  user.py
backend/src/core/utils/: number.py  santitize.py
backend/src/modules/admin/: routing.py
backend/src/modules/auth/: routing.py  schema.py  schemas.py
backend/src/modules/auth/grpc/: handler.py  main.py
backend/src/modules/auth/use_cases/: __init__.py  helpers.py  login_user_by_email.py  login_user_by_username.py  register_user_use_case.py
backend/src/modules/chat/: __init__.py  repository.py  routing.py  schema.py
backend/src/modules/email/: queue.py  service.py
backend/src/modules/rag/: routing.py  schema.py
backend/src/modules/record/: queue.py  repository.py  routing.py  schema.py
backend/src/modules/subscription/: README.md  __init__.py  repository.py  routing.py  schema.py
backend/src/modules/user/: repository.py  schema.py
backend/src/modules/verification/: service.py
backend/src/shared/: uow.py
backend/src/shared/base/: base_repository.py
backend/src/shared/schemas/: email.py  response.py
backend/src/workers/: send_mail.py  transcribe.py
backend/templates/emails/: password_reset.html  password_reset.txt  verification.html  verification.txt
backend/tests/: test_main.py
docs/: venv.md  (+2 more)
(+154 files in other folders)
